--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,12 @@ main {
   padding: 50px 30px;
 }
 :root {
-  --primary: #8c54ff;
-  --secondary: #F3A847;
-  --tertiary: #B12704;
-  --light: #fafafa;
-  --dark: #000000;
-  --darker: #111111;
+  --primary: #000000;
+  --secondary: #FCA311;
+  --tertiary: #8F8F8F;
+  --light: #FFFFFF;
+  --dark: #14213D;
+  --darker: #567AC8;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
@@ -36,7 +36,7 @@ body {
   letter-spacing: .1em;
   background: var(--dark);
   color: var(--light);
-  font-family: 'Poiret One', cursive;
+  font-family: 'Ubuntu Light 300', sans-serif;
 
 }
 
@@ -46,7 +46,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Ubuntu Light 300', sans-serif;
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
@@ -84,7 +84,6 @@ p {
 a {
   color: var(--tertiary);
   text-decoration: none;
-  font-weight: bold;
 }
 
 a:hover {
@@ -293,3 +292,67 @@ a {
 .navActive {
   color: var(--secondary);
 }
+
+
+footer {
+  background-color: var(--secondary);
+  justify-content: space-around;
+  display: flex;
+
+}
+
+.icon-color {
+  fill: var(--light);
+}
+
+.footer-icon-color {
+  fill: var(--dark) !important;
+}
+
+
+/*Media Queries*/
+@media only screen and (max-width: 1060px) {
+  
+  .footer-links {
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 980px) {
+  .footer-links {
+    margin: 20px;
+  }
+
+  footer ul li a {
+    font-size: 16px;
+    margin: 10px 10px;
+  }
+
+  .footer-links {
+    margin: 10px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+
+  footer ul li a {
+    font-size: 14px;
+    margin: 5px 5px;
+  }
+
+  .footer-links {
+    margin: 10px;
+  }
+}
+
+@media only screen and (max-width: 575px) {
+
+  footer ul li a {
+    font-size: 12px;
+    margin: 5px 5px;
+  }
+}
+
