--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-weight: 600;
+  font-weight: normal;
   line-height: 1.5;
   font-size: 18px;
   letter-spacing: .1em;
@@ -47,7 +47,7 @@ h4,
 h5,
 h6 {
   font-family: 'Ubuntu Light 300', sans-serif;
-  font-weight: 500;
+  font-weight: normal;
   margin: 5px 0;
   line-height: 1.25;
 }
@@ -212,6 +212,7 @@ textarea {
 .px-1 {
   padding-right: var(--spacing-one);
   padding-left: var(--spacing-one);
+  background-color: var(--tertiary);
 }
 
 .px-2 {
